--- a/templates/regidup.html
+++ b/templates/regidup.html
@@ -125,11 +125,11 @@
         </div>
         <h2>Register</h2>
         <form method="POST" action="/register" onsubmit="return validateForm()">
-            <input type="text" name="username" placeholder="Username" required>
+            <input type="text" name="username" placeholder="Username already taken" required>
             <input type="password" name="password" id="password" placeholder="Password (must have 8 characters)" required>
             <div id="passwordWarning" style="color: red; margin-bottom: 10px; display: none;">Password must be 8 characters or more</div>
             <input type="text" name="age_input" placeholder="Age" required>
-            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="email" name="email" placeholder="Email" required>
             <input type="checkbox" id="termsCheckbox" required>
             <label for="termsCheckbox">I agree to the <a href="{{ url_for('TandC') }}">Terms & Conditions</a></label><br><br>
             <input type="submit" id="submitButton" value="Register">
@@ -143,23 +143,9 @@
             if (password.length < 8) {
                 alert("Password must be 8 characters or more. Please correct it.");
                 return false; // Prevent form submission
+            } else {
+                return true; // Allow form submission
             }
-    
-            // Email format validation
-            var email = document.getElementById('email').value;
-            var emailRegex = /^\S+@\S+\.\S+$/;
-            if (!emailRegex.test(email)) {
-                alert("Please enter a valid email address.");
-                return false; // Prevent form submission
-            }
-    
-            // Check if the checkbox is checked
-            var checkBox = document.getElementById("termsCheckbox");
-            if (!checkBox.checked) {
-                alert("Please agree to the Terms & Conditions.");
-                return false; // Prevent form submission
-            }
-            return true; // Allow form submission if all validations pass
         }
     
         document.getElementById('password').addEventListener('input', function() {
@@ -174,7 +160,16 @@
                 submitButton.disabled = false; // Enable submit button
             }
         });
+
+        function validateForm() {
+            // Check if the checkbox is checked
+            var checkBox = document.getElementById("termsCheckbox");
+            if (!checkBox.checked) {
+                alert("Please agree to the Terms & Conditions.");
+                return false; // Prevent form submission
+            }
+            return true; // Allow form submission if checkbox is checked
+        }
     </script>
-    
 </body>
 </html>
